objects/Business_Category_by_Account__c.object
<CustomObject>
    <description>Business Category by Account by Show</description>
    <fields>
        <fullName>Account_Details_by_Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Details by Show</label>
        <referenceTo>Account_Details_by_Show__c</referenceTo>
        <relationshipLabel>Business Categories by Account</relationshipLabel>
        <relationshipName>Business_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Categories by Account</relationshipLabel>
        <relationshipName>Business_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Category</label>
        <referenceTo>Business_Category__c</referenceTo>
        <relationshipLabel>Business Categories by Account</relationshipLabel>
        <relationshipName>Business_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Show</label>
        <referenceTo>Show__c</referenceTo>
        <relationshipLabel>Business Categories by Account</relationshipLabel>
        <relationshipName>Business_Categories_by_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Business Category by Account</label>
    <nameField>
        <label>External ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Categories by Account</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>